// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#fetchAuthorityCertificates should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/Test-CA-Name",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "accessUrls": Object {
              "caCertificateAccessUrl": "http://privateca-content-605f9a85-0000-2ec7-9474-f403043ccfa8.storage.googleapis.com/f168e1beb72a7e72e8c5/ca.crt",
              "crlAccessUrl": "http://privateca-content-605f9a85-0000-2ec7-9474-f403043ccfa8.storage.googleapis.com/f168e1beb72a7e72e8c5/crl.crl",
            },
            "caCertificateDescriptions": Array [
              Object {
                "authorityKeyId": Object {
                  "keyId": "f4c932216ac01039c8f3c952fab0c2f7db202315",
                },
                "certFingerprint": Object {
                  "sha256Hash": "f9998966e551d9000710508f33b4d50a6b2282473c913de3e5e0057391be909e",
                },
                "configValues": Object {
                  "caOptions": Object {
                    "isCa": true,
                    "maxIssuerPathLength": 1,
                  },
                  "keyUsage": Object {
                    "baseKeyUsage": Object {
                      "certSign": true,
                      "crlSign": true,
                    },
                  },
                },
                "publicKey": Object {
                  "type": "PEM_RSA_KEY",
                },
                "subjectDescription": Object {
                  "commonName": "Test CA Name",
                  "hexSerialNumber": "00b38cb1619dfd6a5fdc5542a97ab9bb09abab0f",
                  "lifetime": "314496000s",
                  "notAfterTime": "2031-03-20T19:08:06.481768813Z",
                  "notBeforeTime": "2021-04-01T19:08:06.481768813Z",
                  "subject": Object {
                    "organization": "Test Organization Name",
                  },
                  "subjectAltName": Object {},
                },
                "subjectKeyId": Object {
                  "keyId": "f4c932216ac01039c8f3c952fab0c2f7db202315",
                },
              },
            ],
            "config": Object {
              "reusableConfig": Object {
                "reusableConfigValues": Object {
                  "caOptions": Object {
                    "isCa": true,
                    "maxIssuerPathLength": 1,
                  },
                  "keyUsage": Object {
                    "baseKeyUsage": Object {
                      "certSign": true,
                      "crlSign": true,
                    },
                  },
                },
              },
              "subjectConfig": Object {
                "commonName": "Test CA Name",
                "subject": Object {
                  "organization": "Test Organization Name",
                },
              },
            },
            "createTime": "2021-04-01T19:08:05.695936998Z",
            "issuingOptions": Object {
              "includeCaCertUrl": true,
              "includeCrlAccessUrl": true,
            },
            "keySpec": Object {
              "algorithm": "RSA_PKCS1_4096_SHA256",
            },
            "lifetime": "314496000s",
            "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/Test-CA-Name",
            "state": "ENABLED",
            "tier": "ENTERPRISE",
            "type": "SELF_SIGNED",
            "updateTime": "2021-04-07T14:18:36.760073627Z",
          },
        },
      ],
      "_type": "google_privateca_certificate_authority",
      "caCertificateAccessUrl": "http://privateca-content-605f9a85-0000-2ec7-9474-f403043ccfa8.storage.googleapis.com/f168e1beb72a7e72e8c5/ca.crt",
      "category": Array [
        "security",
      ],
      "createdOn": 1617304085695,
      "crlAccessUrl": "http://privateca-content-605f9a85-0000-2ec7-9474-f403043ccfa8.storage.googleapis.com/f168e1beb72a7e72e8c5/crl.crl",
      "deletedOn": undefined,
      "displayName": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/Test-CA-Name",
      "extendedKeyUsage.clientAuth": undefined,
      "extendedKeyUsage.codeSigning": undefined,
      "extendedKeyUsage.emailProtection": undefined,
      "extendedKeyUsage.ocspSigning": undefined,
      "extendedKeyUsage.serverAuth": undefined,
      "extendedKeyUsage.timeStamping": undefined,
      "function": Array [
        "certificate-management",
      ],
      "keyAlgorithm": "RSA_PKCS1_4096_SHA256",
      "keyUsage.certSign": true,
      "keyUsage.contentCommitment": undefined,
      "keyUsage.crlSign": true,
      "keyUsage.dataEncipherment": undefined,
      "keyUsage.decipherOnly": undefined,
      "keyUsage.digitalSignature": undefined,
      "keyUsage.encipherOnly": undefined,
      "keyUsage.keyAgreement": undefined,
      "keyUsage.keyEncipherment": undefined,
      "lifetime": "314496000s",
      "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/Test-CA-Name",
      "public": false,
      "state": "ENABLED",
      "subject": "Test CA Name",
      "subject.countryCode": undefined,
      "subject.locality": undefined,
      "subject.organization": "Test Organization Name",
      "subject.organizationalUnit": undefined,
      "subject.postalCode": undefined,
      "subject.province": undefined,
      "subject.streetAddress": undefined,
      "subjectAltName.dnsNames": undefined,
      "subjectAltName.emailAddresses": undefined,
      "subjectAltName.ipAddresses": undefined,
      "subjectAltName.uris": undefined,
      "tier": "ENTERPRISE",
      "type": "SELF_SIGNED",
      "updatedOn": 1617805116760,
      "webLink": "https://console.cloud.google.com/security/cas/manage/locations/us-central1/certificateAuthorities/Test-CA-Name/details?project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/acmeName",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "accessUrls": Object {
              "caCertificateAccessUrl": "http://test-bucket-with-labels.storage.googleapis.com/f1cc34b5b7e8fa026582/ca.crt",
              "crlAccessUrl": "http://test-bucket-with-labels.storage.googleapis.com/f1cc34b5b7e8fa026582/crl.crl",
            },
            "caCertificateDescriptions": Array [
              Object {
                "authorityKeyId": Object {
                  "keyId": "ec21738d89c6020cfab46e73b1a001d7fb24d34c",
                },
                "certFingerprint": Object {
                  "sha256Hash": "d7de957b8c0903c662332fc8ec4966c5dc01b7426ed778dc389aaa545a37064a",
                },
                "configValues": Object {
                  "caOptions": Object {
                    "isCa": true,
                  },
                  "keyUsage": Object {
                    "baseKeyUsage": Object {
                      "certSign": true,
                      "crlSign": true,
                    },
                  },
                },
                "publicKey": Object {
                  "type": "PEM_RSA_KEY",
                },
                "subjectDescription": Object {
                  "commonName": "acmeName",
                  "hexSerialNumber": "008a51de1d92de213728c7733b74700f4a684513",
                  "lifetime": "314496000s",
                  "notAfterTime": "2031-03-27T14:44:07.900172684Z",
                  "notBeforeTime": "2021-04-08T14:44:07.900172684Z",
                  "subject": Object {
                    "organization": "Acme",
                  },
                  "subjectAltName": Object {},
                },
                "subjectKeyId": Object {
                  "keyId": "ec21738d89c6020cfab46e73b1a001d7fb24d34c",
                },
              },
            ],
            "config": Object {
              "reusableConfig": Object {
                "reusableConfig": "projects/568668481468/locations/us-central1/reusableConfigs/root-unconstrained",
              },
              "subjectConfig": Object {
                "commonName": "acmeName",
                "subject": Object {
                  "organization": "Acme",
                },
              },
            },
            "createTime": "2021-04-08T14:44:07.215539285Z",
            "gcsBucket": "test-bucket-with-labels",
            "issuingOptions": Object {
              "includeCaCertUrl": true,
              "includeCrlAccessUrl": true,
            },
            "keySpec": Object {
              "algorithm": "RSA_PKCS1_2048_SHA256",
            },
            "lifetime": "314496000s",
            "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/acmeName",
            "state": "ENABLED",
            "tier": "ENTERPRISE",
            "type": "SELF_SIGNED",
            "updateTime": "2021-04-08T14:44:09.263990183Z",
          },
        },
      ],
      "_type": "google_privateca_certificate_authority",
      "caCertificateAccessUrl": "http://test-bucket-with-labels.storage.googleapis.com/f1cc34b5b7e8fa026582/ca.crt",
      "category": Array [
        "security",
      ],
      "createdOn": 1617893047215,
      "crlAccessUrl": "http://test-bucket-with-labels.storage.googleapis.com/f1cc34b5b7e8fa026582/crl.crl",
      "deletedOn": undefined,
      "displayName": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/acmeName",
      "extendedKeyUsage.clientAuth": undefined,
      "extendedKeyUsage.codeSigning": undefined,
      "extendedKeyUsage.emailProtection": undefined,
      "extendedKeyUsage.ocspSigning": undefined,
      "extendedKeyUsage.serverAuth": undefined,
      "extendedKeyUsage.timeStamping": undefined,
      "function": Array [
        "certificate-management",
      ],
      "keyAlgorithm": "RSA_PKCS1_2048_SHA256",
      "keyUsage.certSign": undefined,
      "keyUsage.contentCommitment": undefined,
      "keyUsage.crlSign": undefined,
      "keyUsage.dataEncipherment": undefined,
      "keyUsage.decipherOnly": undefined,
      "keyUsage.digitalSignature": undefined,
      "keyUsage.encipherOnly": undefined,
      "keyUsage.keyAgreement": undefined,
      "keyUsage.keyEncipherment": undefined,
      "lifetime": "314496000s",
      "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/acmeName",
      "public": false,
      "state": "ENABLED",
      "subject": "acmeName",
      "subject.countryCode": undefined,
      "subject.locality": undefined,
      "subject.organization": "Acme",
      "subject.organizationalUnit": undefined,
      "subject.postalCode": undefined,
      "subject.province": undefined,
      "subject.streetAddress": undefined,
      "subjectAltName.dnsNames": undefined,
      "subjectAltName.emailAddresses": undefined,
      "subjectAltName.ipAddresses": undefined,
      "subjectAltName.uris": undefined,
      "tier": "ENTERPRISE",
      "type": "SELF_SIGNED",
      "updatedOn": 1617893049263,
      "webLink": "https://console.cloud.google.com/security/cas/manage/locations/us-central1/certificateAuthorities/acmeName/details?project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "Certificate",
      ],
      "_key": "projects/711888229551/locations/us-central1/certificateAuthorities/Test-CA-Name/certificates/20210401-nkm-v03",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "certificateDescription": Object {
              "aiaIssuingCertificateUrls": Array [
                "http://privateca-content-605f9a85-0000-2ec7-9474-f403043ccfa8.storage.googleapis.com/f168e1beb72a7e72e8c5/ca.crt",
              ],
              "authorityKeyId": Object {
                "keyId": "f4c932216ac01039c8f3c952fab0c2f7db202315",
              },
              "certFingerprint": Object {
                "sha256Hash": "7aeb434082c0ea73d819c1e4fab7a3e31f027a9d4440f666af2e3ac38a26039b",
              },
              "configValues": Object {
                "caOptions": Object {
                  "isCa": false,
                },
                "keyUsage": Object {
                  "baseKeyUsage": Object {
                    "digitalSignature": true,
                    "keyEncipherment": true,
                  },
                },
              },
              "crlDistributionPoints": Array [
                "http://privateca-content-605f9a85-0000-2ec7-9474-f403043ccfa8.storage.googleapis.com/f168e1beb72a7e72e8c5/crl.crl",
              ],
              "publicKey": Object {
                "type": "PEM_RSA_KEY",
              },
              "subjectDescription": Object {
                "hexSerialNumber": "ec41a22274884f34272ea3dabe37a42daffe41",
                "lifetime": "2592000s",
                "notAfterTime": "2021-05-01T19:17:48Z",
                "notBeforeTime": "2021-04-01T19:17:48Z",
                "subjectAltName": Object {
                  "dnsNames": Array [
                    "google.com",
                  ],
                },
              },
              "subjectKeyId": Object {
                "keyId": "abb01889d84091201b6c09b3f4f6cf04d0a91c13",
              },
            },
            "config": Object {
              "reusableConfig": Object {
                "reusableConfigValues": Object {
                  "caOptions": Object {
                    "isCa": false,
                  },
                  "keyUsage": Object {
                    "baseKeyUsage": Object {
                      "digitalSignature": true,
                      "keyEncipherment": true,
                    },
                    "extendedKeyUsage": Object {},
                  },
                },
              },
              "subjectConfig": Object {
                "subjectAltName": Object {
                  "dnsNames": Array [
                    "google.com",
                  ],
                },
              },
            },
            "createTime": "2021-04-01T19:17:48.319675789Z",
            "lifetime": "2592000s",
            "name": "projects/711888229551/locations/us-central1/certificateAuthorities/Test-CA-Name/certificates/20210401-nkm-v03",
            "updateTime": "2021-04-01T19:17:48.319675789Z",
          },
        },
      ],
      "_type": "google_privateca_certificate",
      "alternativeNames": Array [
        "google.com",
      ],
      "createdOn": 1617304668319,
      "displayName": "projects/711888229551/locations/us-central1/certificateAuthorities/Test-CA-Name/certificates/20210401-nkm-v03",
      "extendedKeyUsage.clientAuth": undefined,
      "extendedKeyUsage.codeSigning": undefined,
      "extendedKeyUsage.emailProtection": undefined,
      "extendedKeyUsage.ocspSigning": undefined,
      "extendedKeyUsage.serverAuth": undefined,
      "extendedKeyUsage.timeStamping": undefined,
      "hexSerial": "ec41a22274884f34272ea3dabe37a42daffe41",
      "issuer": "Test-CA-Name",
      "keyAlgorithm": "RSA_PKCS1_4096_SHA256",
      "keyUsage.certSign": undefined,
      "keyUsage.contentCommitment": undefined,
      "keyUsage.crlSign": undefined,
      "keyUsage.dataEncipherment": undefined,
      "keyUsage.decipherOnly": undefined,
      "keyUsage.digitalSignature": true,
      "keyUsage.encipherOnly": undefined,
      "keyUsage.keyAgreement": undefined,
      "keyUsage.keyEncipherment": true,
      "lifetime": "2592000s",
      "name": "projects/711888229551/locations/us-central1/certificateAuthorities/Test-CA-Name/certificates/20210401-nkm-v03",
      "notAfterTime": 1619896668000,
      "notBeforeTime": 1617304668000,
      "publicKeyType": "PEM_RSA_KEY",
      "subject": undefined,
      "subject.countryCode": undefined,
      "subject.locality": undefined,
      "subject.organization": undefined,
      "subject.organizationalUnit": undefined,
      "subject.postalCode": undefined,
      "subject.province": undefined,
      "subject.streetAddress": undefined,
      "subjectAltName.dnsNames": Array [
        "google.com",
      ],
      "subjectAltName.emailAddresses": undefined,
      "subjectAltName.ipAddresses": undefined,
      "subjectAltName.uris": undefined,
      "updatedOn": 1617304668319,
      "webLink": "https://console.cloud.google.com/security/cas/certificate/locations/us-central1/certificateAuthorities/Test-CA-Name/certificates/20210401-nkm-v03?project=j1-gc-integration-dev-v2",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "CREATED",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/Test-CA-Name",
      "_key": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/Test-CA-Name|created|projects/711888229551/locations/us-central1/certificateAuthorities/Test-CA-Name/certificates/20210401-nkm-v03",
      "_toEntityKey": "projects/711888229551/locations/us-central1/certificateAuthorities/Test-CA-Name/certificates/20210401-nkm-v03",
      "_type": "google_privateca_certificate_authority_created_certificate",
      "displayName": "CREATED",
    },
  ],
  "encounteredTypes": Array [
    "google_privateca_certificate_authority",
    "google_privateca_certificate",
    "google_privateca_certificate_authority_created_certificate",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 1,
}
`;

exports[`#fetchCertificateAuthorities should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "DataStore",
      ],
      "_key": "bucket:gcf-sources-711888229551-us-central1",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "cors": Array [
              Object {
                "method": Array [
                  "GET",
                ],
                "origin": Array [
                  "https://*.cloud.google.com",
                  "https://*.corp.google.com",
                  "https://*.corp.google.com:*",
                ],
              },
            ],
            "etag": "CAE=",
            "iamConfiguration": Object {
              "bucketPolicyOnly": Object {
                "enabled": true,
                "lockedTime": "2021-05-19T00:04:30.131Z",
              },
              "uniformBucketLevelAccess": Object {
                "enabled": true,
                "lockedTime": "2021-05-19T00:04:30.131Z",
              },
            },
            "id": "gcf-sources-711888229551-us-central1",
            "kind": "storage#bucket",
            "location": "US-CENTRAL1",
            "locationType": "region",
            "metageneration": "1",
            "name": "gcf-sources-711888229551-us-central1",
            "projectNumber": "711888229551",
            "selfLink": "https://www.googleapis.com/storage/v1/b/gcf-sources-711888229551-us-central1",
            "storageClass": "STANDARD",
            "timeCreated": "2021-02-18T00:04:30.131Z",
            "updated": "2021-02-18T00:04:30.131Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "classification": null,
      "createdOn": 1613606670131,
      "displayName": "gcf-sources-711888229551-us-central1",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "gcf-sources-711888229551-us-central1",
      "isSubjectToObjectAcls": false,
      "kmsKeyName": undefined,
      "location": "US-CENTRAL1",
      "name": "gcf-sources-711888229551-us-central1",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": true,
      "updatedOn": 1613606670131,
      "webLink": "https://console.cloud.google.com/storage/browser/gcf-sources-711888229551-us-central1;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v2-sink-logging-bucket",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "etag": "CAE=",
            "iamConfiguration": Object {
              "bucketPolicyOnly": Object {
                "enabled": false,
              },
              "uniformBucketLevelAccess": Object {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v2-sink-logging-bucket",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "j1-gc-integration-dev-v2-sink-logging-bucket",
            "projectNumber": "711888229551",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v2-sink-logging-bucket",
            "storageClass": "STANDARD",
            "timeCreated": "2021-02-18T00:31:30.869Z",
            "updated": "2021-02-18T00:31:30.869Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "classification": null,
      "createdOn": 1613608290869,
      "displayName": "j1-gc-integration-dev-v2-sink-logging-bucket",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "j1-gc-integration-dev-v2-sink-logging-bucket",
      "isSubjectToObjectAcls": true,
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v2-sink-logging-bucket",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1613608290869,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v2-sink-logging-bucket;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v2.appspot.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "etag": "CAE=",
            "iamConfiguration": Object {
              "bucketPolicyOnly": Object {
                "enabled": false,
              },
              "uniformBucketLevelAccess": Object {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v2.appspot.com",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "j1-gc-integration-dev-v2.appspot.com",
            "projectNumber": "711888229551",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v2.appspot.com",
            "storageClass": "STANDARD",
            "timeCreated": "2021-03-09T14:10:10.943Z",
            "updated": "2021-03-09T14:10:10.943Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "classification": null,
      "createdOn": 1615299010943,
      "displayName": "j1-gc-integration-dev-v2.appspot.com",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "j1-gc-integration-dev-v2.appspot.com",
      "isSubjectToObjectAcls": true,
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v2.appspot.com",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1615299010943,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v2.appspot.com;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "DataStore",
      ],
      "_key": "bucket:j1-gc-integration-dev-v2cloudfunctions",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "etag": "CAE=",
            "iamConfiguration": Object {
              "bucketPolicyOnly": Object {
                "enabled": false,
              },
              "uniformBucketLevelAccess": Object {
                "enabled": false,
              },
            },
            "id": "j1-gc-integration-dev-v2cloudfunctions",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "j1-gc-integration-dev-v2cloudfunctions",
            "projectNumber": "711888229551",
            "selfLink": "https://www.googleapis.com/storage/v1/b/j1-gc-integration-dev-v2cloudfunctions",
            "storageClass": "STANDARD",
            "timeCreated": "2021-02-17T23:05:05.322Z",
            "updated": "2021-02-17T23:05:05.322Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "classification": null,
      "createdOn": 1613603105322,
      "displayName": "j1-gc-integration-dev-v2cloudfunctions",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "j1-gc-integration-dev-v2cloudfunctions",
      "isSubjectToObjectAcls": true,
      "kmsKeyName": undefined,
      "location": "US",
      "name": "j1-gc-integration-dev-v2cloudfunctions",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1613603105322,
      "webLink": "https://console.cloud.google.com/storage/browser/j1-gc-integration-dev-v2cloudfunctions;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "DataStore",
      ],
      "_key": "bucket:staging.j1-gc-integration-dev-v2.appspot.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "etag": "CAE=",
            "iamConfiguration": Object {
              "bucketPolicyOnly": Object {
                "enabled": false,
              },
              "uniformBucketLevelAccess": Object {
                "enabled": false,
              },
            },
            "id": "staging.j1-gc-integration-dev-v2.appspot.com",
            "kind": "storage#bucket",
            "lifecycle": Object {
              "rule": Array [
                Object {
                  "action": Object {
                    "type": "Delete",
                  },
                  "condition": Object {
                    "age": 15,
                  },
                },
              ],
            },
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "staging.j1-gc-integration-dev-v2.appspot.com",
            "projectNumber": "711888229551",
            "selfLink": "https://www.googleapis.com/storage/v1/b/staging.j1-gc-integration-dev-v2.appspot.com",
            "storageClass": "STANDARD",
            "timeCreated": "2021-03-09T14:10:10.941Z",
            "updated": "2021-03-09T14:10:10.941Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "classification": null,
      "createdOn": 1615299010941,
      "displayName": "staging.j1-gc-integration-dev-v2.appspot.com",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "staging.j1-gc-integration-dev-v2.appspot.com",
      "isSubjectToObjectAcls": true,
      "kmsKeyName": undefined,
      "location": "US",
      "name": "staging.j1-gc-integration-dev-v2.appspot.com",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1615299010941,
      "webLink": "https://console.cloud.google.com/storage/browser/staging.j1-gc-integration-dev-v2.appspot.com;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "DataStore",
      ],
      "_key": "bucket:test-bucket-with-labels",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "defaultEventBasedHold": false,
            "etag": "CAI=",
            "iamConfiguration": Object {
              "bucketPolicyOnly": Object {
                "enabled": true,
                "lockedTime": "2021-06-16T00:15:34.452Z",
              },
              "uniformBucketLevelAccess": Object {
                "enabled": true,
                "lockedTime": "2021-06-16T00:15:34.452Z",
              },
            },
            "id": "test-bucket-with-labels",
            "kind": "storage#bucket",
            "labels": Object {
              "my-label-test": "testing",
              "my-label-test-2": "testing2",
            },
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "2",
            "name": "test-bucket-with-labels",
            "projectNumber": "711888229551",
            "satisfiesPZS": false,
            "selfLink": "https://www.googleapis.com/storage/v1/b/test-bucket-with-labels",
            "storageClass": "STANDARD",
            "timeCreated": "2021-03-18T00:15:34.452Z",
            "updated": "2021-04-08T14:44:05.673Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "classification": null,
      "createdOn": 1616026534452,
      "displayName": "test-bucket-with-labels",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAI=",
      "id": "test-bucket-with-labels",
      "isSubjectToObjectAcls": false,
      "kmsKeyName": undefined,
      "location": "US",
      "name": "test-bucket-with-labels",
      "public": false,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "tag.my-label-test": "testing",
      "tag.my-label-test-2": "testing2",
      "uniformBucketLevelAccess": true,
      "updatedOn": 1617893045673,
      "webLink": "https://console.cloud.google.com/storage/browser/test-bucket-with-labels;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "DataStore",
      ],
      "_key": "bucket:us.artifacts.j1-gc-integration-dev-v2.appspot.com",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "etag": "CAE=",
            "iamConfiguration": Object {
              "bucketPolicyOnly": Object {
                "enabled": false,
              },
              "uniformBucketLevelAccess": Object {
                "enabled": false,
              },
            },
            "id": "us.artifacts.j1-gc-integration-dev-v2.appspot.com",
            "kind": "storage#bucket",
            "location": "US",
            "locationType": "multi-region",
            "metageneration": "1",
            "name": "us.artifacts.j1-gc-integration-dev-v2.appspot.com",
            "projectNumber": "711888229551",
            "selfLink": "https://www.googleapis.com/storage/v1/b/us.artifacts.j1-gc-integration-dev-v2.appspot.com",
            "storageClass": "STANDARD",
            "timeCreated": "2021-02-18T00:25:22.127Z",
            "updated": "2021-02-18T00:25:22.127Z",
          },
        },
      ],
      "_type": "google_storage_bucket",
      "classification": null,
      "createdOn": 1613607922127,
      "displayName": "us.artifacts.j1-gc-integration-dev-v2.appspot.com",
      "encrypted": true,
      "encryptionKeyRef": undefined,
      "etag": "CAE=",
      "id": "us.artifacts.j1-gc-integration-dev-v2.appspot.com",
      "isSubjectToObjectAcls": true,
      "kmsKeyName": undefined,
      "location": "US",
      "name": "us.artifacts.j1-gc-integration-dev-v2.appspot.com",
      "public": true,
      "retentionDate": undefined,
      "retentionPeriod": undefined,
      "retentionPolicyEnabled": undefined,
      "storageClass": "STANDARD",
      "uniformBucketLevelAccess": false,
      "updatedOn": 1613607922127,
      "webLink": "https://console.cloud.google.com/storage/browser/us.artifacts.j1-gc-integration-dev-v2.appspot.com;tab=objects?forceOnBucketsSortingFiltering=false&project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/Test-CA-Name",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "accessUrls": Object {
              "caCertificateAccessUrl": "http://privateca-content-605f9a85-0000-2ec7-9474-f403043ccfa8.storage.googleapis.com/f168e1beb72a7e72e8c5/ca.crt",
              "crlAccessUrl": "http://privateca-content-605f9a85-0000-2ec7-9474-f403043ccfa8.storage.googleapis.com/f168e1beb72a7e72e8c5/crl.crl",
            },
            "caCertificateDescriptions": Array [
              Object {
                "authorityKeyId": Object {
                  "keyId": "f4c932216ac01039c8f3c952fab0c2f7db202315",
                },
                "certFingerprint": Object {
                  "sha256Hash": "f9998966e551d9000710508f33b4d50a6b2282473c913de3e5e0057391be909e",
                },
                "configValues": Object {
                  "caOptions": Object {
                    "isCa": true,
                    "maxIssuerPathLength": 1,
                  },
                  "keyUsage": Object {
                    "baseKeyUsage": Object {
                      "certSign": true,
                      "crlSign": true,
                    },
                  },
                },
                "publicKey": Object {
                  "type": "PEM_RSA_KEY",
                },
                "subjectDescription": Object {
                  "commonName": "Test CA Name",
                  "hexSerialNumber": "00b38cb1619dfd6a5fdc5542a97ab9bb09abab0f",
                  "lifetime": "314496000s",
                  "notAfterTime": "2031-03-20T19:08:06.481768813Z",
                  "notBeforeTime": "2021-04-01T19:08:06.481768813Z",
                  "subject": Object {
                    "organization": "Test Organization Name",
                  },
                  "subjectAltName": Object {},
                },
                "subjectKeyId": Object {
                  "keyId": "f4c932216ac01039c8f3c952fab0c2f7db202315",
                },
              },
            ],
            "config": Object {
              "reusableConfig": Object {
                "reusableConfigValues": Object {
                  "caOptions": Object {
                    "isCa": true,
                    "maxIssuerPathLength": 1,
                  },
                  "keyUsage": Object {
                    "baseKeyUsage": Object {
                      "certSign": true,
                      "crlSign": true,
                    },
                  },
                },
              },
              "subjectConfig": Object {
                "commonName": "Test CA Name",
                "subject": Object {
                  "organization": "Test Organization Name",
                },
              },
            },
            "createTime": "2021-04-01T19:08:05.695936998Z",
            "issuingOptions": Object {
              "includeCaCertUrl": true,
              "includeCrlAccessUrl": true,
            },
            "keySpec": Object {
              "algorithm": "RSA_PKCS1_4096_SHA256",
            },
            "lifetime": "314496000s",
            "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/Test-CA-Name",
            "state": "ENABLED",
            "tier": "ENTERPRISE",
            "type": "SELF_SIGNED",
            "updateTime": "2021-04-07T14:18:36.760073627Z",
          },
        },
      ],
      "_type": "google_privateca_certificate_authority",
      "caCertificateAccessUrl": "http://privateca-content-605f9a85-0000-2ec7-9474-f403043ccfa8.storage.googleapis.com/f168e1beb72a7e72e8c5/ca.crt",
      "category": Array [
        "security",
      ],
      "createdOn": 1617304085695,
      "crlAccessUrl": "http://privateca-content-605f9a85-0000-2ec7-9474-f403043ccfa8.storage.googleapis.com/f168e1beb72a7e72e8c5/crl.crl",
      "deletedOn": undefined,
      "displayName": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/Test-CA-Name",
      "extendedKeyUsage.clientAuth": undefined,
      "extendedKeyUsage.codeSigning": undefined,
      "extendedKeyUsage.emailProtection": undefined,
      "extendedKeyUsage.ocspSigning": undefined,
      "extendedKeyUsage.serverAuth": undefined,
      "extendedKeyUsage.timeStamping": undefined,
      "function": Array [
        "certificate-management",
      ],
      "keyAlgorithm": "RSA_PKCS1_4096_SHA256",
      "keyUsage.certSign": true,
      "keyUsage.contentCommitment": undefined,
      "keyUsage.crlSign": true,
      "keyUsage.dataEncipherment": undefined,
      "keyUsage.decipherOnly": undefined,
      "keyUsage.digitalSignature": undefined,
      "keyUsage.encipherOnly": undefined,
      "keyUsage.keyAgreement": undefined,
      "keyUsage.keyEncipherment": undefined,
      "lifetime": "314496000s",
      "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/Test-CA-Name",
      "public": false,
      "state": "ENABLED",
      "subject": "Test CA Name",
      "subject.countryCode": undefined,
      "subject.locality": undefined,
      "subject.organization": "Test Organization Name",
      "subject.organizationalUnit": undefined,
      "subject.postalCode": undefined,
      "subject.province": undefined,
      "subject.streetAddress": undefined,
      "subjectAltName.dnsNames": undefined,
      "subjectAltName.emailAddresses": undefined,
      "subjectAltName.ipAddresses": undefined,
      "subjectAltName.uris": undefined,
      "tier": "ENTERPRISE",
      "type": "SELF_SIGNED",
      "updatedOn": 1617805116760,
      "webLink": "https://console.cloud.google.com/security/cas/manage/locations/us-central1/certificateAuthorities/Test-CA-Name/details?project=j1-gc-integration-dev-v2",
    },
    Object {
      "_class": Array [
        "Service",
      ],
      "_key": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/acmeName",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "accessUrls": Object {
              "caCertificateAccessUrl": "http://test-bucket-with-labels.storage.googleapis.com/f1cc34b5b7e8fa026582/ca.crt",
              "crlAccessUrl": "http://test-bucket-with-labels.storage.googleapis.com/f1cc34b5b7e8fa026582/crl.crl",
            },
            "caCertificateDescriptions": Array [
              Object {
                "authorityKeyId": Object {
                  "keyId": "ec21738d89c6020cfab46e73b1a001d7fb24d34c",
                },
                "certFingerprint": Object {
                  "sha256Hash": "d7de957b8c0903c662332fc8ec4966c5dc01b7426ed778dc389aaa545a37064a",
                },
                "configValues": Object {
                  "caOptions": Object {
                    "isCa": true,
                  },
                  "keyUsage": Object {
                    "baseKeyUsage": Object {
                      "certSign": true,
                      "crlSign": true,
                    },
                  },
                },
                "publicKey": Object {
                  "type": "PEM_RSA_KEY",
                },
                "subjectDescription": Object {
                  "commonName": "acmeName",
                  "hexSerialNumber": "008a51de1d92de213728c7733b74700f4a684513",
                  "lifetime": "314496000s",
                  "notAfterTime": "2031-03-27T14:44:07.900172684Z",
                  "notBeforeTime": "2021-04-08T14:44:07.900172684Z",
                  "subject": Object {
                    "organization": "Acme",
                  },
                  "subjectAltName": Object {},
                },
                "subjectKeyId": Object {
                  "keyId": "ec21738d89c6020cfab46e73b1a001d7fb24d34c",
                },
              },
            ],
            "config": Object {
              "reusableConfig": Object {
                "reusableConfig": "projects/568668481468/locations/us-central1/reusableConfigs/root-unconstrained",
              },
              "subjectConfig": Object {
                "commonName": "acmeName",
                "subject": Object {
                  "organization": "Acme",
                },
              },
            },
            "createTime": "2021-04-08T14:44:07.215539285Z",
            "gcsBucket": "test-bucket-with-labels",
            "issuingOptions": Object {
              "includeCaCertUrl": true,
              "includeCrlAccessUrl": true,
            },
            "keySpec": Object {
              "algorithm": "RSA_PKCS1_2048_SHA256",
            },
            "lifetime": "314496000s",
            "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/acmeName",
            "state": "ENABLED",
            "tier": "ENTERPRISE",
            "type": "SELF_SIGNED",
            "updateTime": "2021-04-08T14:44:09.263990183Z",
          },
        },
      ],
      "_type": "google_privateca_certificate_authority",
      "caCertificateAccessUrl": "http://test-bucket-with-labels.storage.googleapis.com/f1cc34b5b7e8fa026582/ca.crt",
      "category": Array [
        "security",
      ],
      "createdOn": 1617893047215,
      "crlAccessUrl": "http://test-bucket-with-labels.storage.googleapis.com/f1cc34b5b7e8fa026582/crl.crl",
      "deletedOn": undefined,
      "displayName": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/acmeName",
      "extendedKeyUsage.clientAuth": undefined,
      "extendedKeyUsage.codeSigning": undefined,
      "extendedKeyUsage.emailProtection": undefined,
      "extendedKeyUsage.ocspSigning": undefined,
      "extendedKeyUsage.serverAuth": undefined,
      "extendedKeyUsage.timeStamping": undefined,
      "function": Array [
        "certificate-management",
      ],
      "keyAlgorithm": "RSA_PKCS1_2048_SHA256",
      "keyUsage.certSign": undefined,
      "keyUsage.contentCommitment": undefined,
      "keyUsage.crlSign": undefined,
      "keyUsage.dataEncipherment": undefined,
      "keyUsage.decipherOnly": undefined,
      "keyUsage.digitalSignature": undefined,
      "keyUsage.encipherOnly": undefined,
      "keyUsage.keyAgreement": undefined,
      "keyUsage.keyEncipherment": undefined,
      "lifetime": "314496000s",
      "name": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/acmeName",
      "public": false,
      "state": "ENABLED",
      "subject": "acmeName",
      "subject.countryCode": undefined,
      "subject.locality": undefined,
      "subject.organization": "Acme",
      "subject.organizationalUnit": undefined,
      "subject.postalCode": undefined,
      "subject.province": undefined,
      "subject.streetAddress": undefined,
      "subjectAltName.dnsNames": undefined,
      "subjectAltName.emailAddresses": undefined,
      "subjectAltName.ipAddresses": undefined,
      "subjectAltName.uris": undefined,
      "tier": "ENTERPRISE",
      "type": "SELF_SIGNED",
      "updatedOn": 1617893049263,
      "webLink": "https://console.cloud.google.com/security/cas/manage/locations/us-central1/certificateAuthorities/acmeName/details?project=j1-gc-integration-dev-v2",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "USES",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/acmeName",
      "_key": "projects/j1-gc-integration-dev-v2/locations/us-central1/certificateAuthorities/acmeName|uses|bucket:test-bucket-with-labels",
      "_toEntityKey": "bucket:test-bucket-with-labels",
      "_type": "google_privateca_certificate_authority_uses_storage_bucket",
      "displayName": "USES",
    },
  ],
  "encounteredTypes": Array [
    "google_storage_bucket",
    "google_privateca_certificate_authority",
    "google_privateca_certificate_authority_uses_storage_bucket",
  ],
  "numCollectedEntities": 9,
  "numCollectedRelationships": 1,
}
`;
